<resources>
    <string name="app_name">RandomApp</string>
    <string name="tw_yes_no_maybe">Yes/No/Maybe</string>
    <string name="tw_heads_and_tails">Heads and tails</string>
    <string name="tw_dice">Dice</string>
    <string name="tw_spin_the_bottle">Spin the bottle</string>
    <string name="tw_random_number">Random number</string>
    <string name="descr_coins_heads">Coin heads</string>
    <string name="tw_input_range">Input range:</string>
    <string name="tw_from">from:</string>
    <string name="tw_to">to:</string>
    <string name="btn_generate_random_number">Generate random number</string>
    <string name="dice_1">Dice 1</string>
    <string name="dice_2">Dice 2</string>
    <string name="dice_3">Dice 3</string>
    <string name="dice_4">Dice 4</string>
    <string name="dice_5">Dice 5</string>
    <string name="dice_6">Dice 6</string>
    <string name="bottle">Bottle</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="maybe">Maybe</string>
    <string name="ask_your_question">Ask your question and press the button</string>
    <string name="find_out_the_answer">Find out the answer</string>
</resources>