<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DiceActivity">

    <ImageView
        android:id="@+id/imageViewDice1"
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:layout_margin="150dp"
        android:contentDescription="@string/dice_1"
        android:visibility="invisible"
        tools:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/dice_1" />

    <ImageView
        android:id="@+id/imageViewDice2"
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:layout_margin="150dp"
        android:contentDescription="@string/dice_2"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/dice_2" />

    <ImageView
        android:id="@+id/imageViewDice3"
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:layout_margin="150dp"
        android:contentDescription="@string/dice_3"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/dice_3" />

    <ImageView
        android:id="@+id/imageViewDice4"
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:layout_margin="150dp"
        android:contentDescription="@string/dice_4"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/dice_4" />

    <ImageView
        android:id="@+id/imageViewDice5"
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:layout_margin="150dp"
        android:contentDescription="@string/dice_5"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/dice_5" />

    <ImageView
        android:id="@+id/imageViewDice6"
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:layout_margin="150dp"
        android:contentDescription="@string/dice_6"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/dice_6" />
</androidx.constraintlayout.widget.ConstraintLayout>