<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/platinum"
    tools:context=".RandomNumberActivity">

    <TextView
        android:id="@+id/textViewLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/tw_input_range"
        android:textStyle="bold"
        android:textSize="24sp"
        android:textColor="@color/dark_lavender"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewLabelFrom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:text="@string/tw_from"
        app:layout_constraintEnd_toStartOf="@+id/editTextNumberFrom"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewLabel" />

    <EditText
        android:id="@+id/editTextNumberFrom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:autofillHints=""
        android:ems="5"
        android:hint="@string/tw_from"
        android:inputType="number"
        app:layout_constraintEnd_toStartOf="@+id/textViewLabelTo"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/textViewLabelFrom"
        app:layout_constraintTop_toBottomOf="@+id/textViewLabel" />

    <TextView
        android:id="@+id/textViewLabelTo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/tw_to"
        app:layout_constraintEnd_toStartOf="@+id/editTextNumberTo"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/editTextNumberFrom"
        app:layout_constraintTop_toBottomOf="@+id/textViewLabel" />

    <EditText
        android:id="@+id/editTextNumberTo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:autofillHints=""
        android:ems="5"
        android:hint="@string/tw_to"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/textViewLabelTo"
        app:layout_constraintTop_toBottomOf="@+id/textViewLabel" />

    <Button
        android:id="@+id/buttonGenerateNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/btn_generate_random_number"
        android:backgroundTint="@color/dark_lavender"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextNumberFrom" />

    <TextView
        android:id="@+id/textViewTheNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:layout_marginStart="10dp"
        android:textColor="@color/dark_lavender"
        android:textSize="50sp"
        tools:text="100"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonGenerateNumber" />
</androidx.constraintlayout.widget.ConstraintLayout>